contact page alignment changes

--- a/contact.html
+++ b/contact.html
@@ -12,27 +12,31 @@
 </head>
 <body>
     <main>
-        <div class="contact con-container">
+        <div class="contact con-container container">
         <h1 style="text-align: center; margin-top: 50px; color: #F2E3B6;">Contact Us</h1>
         <p style="text-align: center;color:#F2E3B6;">Any question or remarks? Just write us a message!</p>
-        <div style="text-align: center; margin-top: 20px;">
+        <div style="text-align: center; margin-top: 20px; padding: 0 50px;">
         <div class="main ma-container">
         <div class="main sub-container">
-            <h4>Contact information</h4>
-            <h5>Say something to start a live chat</h5>
+            <div>
+                <h4>Contact information</h4>
+                <h5>Say something to start a live chat</h5>
+            </div>
+           
             <div class="row">
                 <div class="foot fo-main">
                         <div><i class="fa fa-phone"></i> +1012 3456 789</div>
                         <div><i class="fa fa-envelope"></i> Email</div>
                         <div><i class="fa fa-map-marker" aria-hidden="true"></i> Address</div>
-                        
-                            <div class="con co-lm">
-                            <div><i class="fa fa-twitter"></i></div>
-                            <div><i class="fa fa-instagram"></i></div>
-                        </div>
                         </div>
                     </div>
-                    </div>
+
+            <div class="con co-lm">
+                <span><i class="fa fa-twitter social-icon"></i></span>
+                <span><i class="fa fa-instagram social-icon social-icon-insta"></i></span>
+                <span><i class="fa fa-facebook social-icon"></i></span>
+            </div>                    
+            </div>
         </div>
         </div>
         </div>
