Latest ui changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <!-- Center Links -->
                     <div class="navbar-nav navbar-nav-center">
-                        <a class="nav-link" href="home.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                         <a class="nav-link" href="#Products">Products</a>
                         <a class="nav-link" href="#About Us" >About Us</a>
                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -55,7 +55,7 @@
             <p>Experience the richness of handpicked nuts and dry fruits that 
                 redefine quality and taste.
             </p>
-            <button class="shop-now">Shop Now</button>
+            <a href="#shopNow"><button class="shop-now">Shop Now</button></a>
            <!-- <img style="height: 400px; width: 100%;"  src="./assets/images/nut2.png" alt=""> -->
         </div>
     </div>
@@ -71,7 +71,7 @@
 
 
         <!-- Section 2 -->
-        <section class="container cart-section ">
+        <section class="container cart-section" id="shopNow">
             <h2 class="cart-text">Our Bestsellers </h2>
             <p class="cart-header">Experience the richness of handpicked nuts and dry fruits that redefine quality and taste</p>
             <div class="cart-container">
@@ -148,7 +148,7 @@
             <div class="col-md-2 row-gap">
                 <div>Company</div>
                 <div>About</div>
-                <div>Contacts</div>
+                <div><a href="contact.html">Contacts</a></div>
                 <div>Blogs</div>
             </div>
             <div class="col-md-2 row-gap">
