--- a/home.html
+++ b/home.html
@@ -82,25 +82,35 @@
     </style>
 </head>
 <body style="background-image:url(./assets/images/background.jpeg);background-size: cover;">
-    <!-- Navbar -->
-    <!-- <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand text-white" href="#">Goldennutzz</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <nav class="navbar navbar-expand-lg navbar-light navigation-bar">
+        <div class="container-fluid">
+            <!-- Brand (Left) -->
+            <a class="navbar-brand" href="#" style="color: #ffffff;">Goldennutzz</a>
+
+            <!-- Toggle Button (for small screens) -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Signup</a></li>
-                </ul>
+
+            <!-- Navbar Items -->
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <!-- Center Links -->
+                <div class="navbar-nav navbar-nav-center">
+                    <a class="nav-link" href="home.html">Home</a>
+                    <a class="nav-link" href="#Products">Products</a>
+                    <a class="nav-link" href="#About Us" >About Us</a>
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                </div>
+
+                <!-- Right Links -->
+                <div class="navbar-nav navbar-nav-right">
+                    <!-- <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="#">Signup</a> -->
+                    <a class="nav-link"><i class="fa fa-shopping-cart"></i></a>
+                </div>
             </div>
         </div>
-    </nav> -->
+    </nav>
 
     <!-- Form Section -->
     <div class="container d-flex justify-content-center">
