--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Account</title>
+    <title>Contact Us</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <!-- Google Fonts -->
@@ -12,29 +12,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom CSS -->
     <style>
-        .body {
-            /* background-image: url('../assets/images/background.jpeg'); */
-            background-size:cover;
+        body {
+            background: url('https://source.unsplash.com/1920x1080/?fruits') no-repeat center center fixed;
+            background-size: cover;
             font-family: 'Pompiere', sans-serif;
+            color: #f2e3b6;
         }
-        /* .navbar {
-            background-color: rgba(102, 51, 0, 0.8);
-        }
-        .navbar a {
-            color: #fff;
-        }
-        .navbar a:hover {
-            color: #f2e3b6; 
-        } */
-        .form-container {
-            background-color: #633A00A3;
+        .contact-container {
+            background-color: rgba(255, 255, 255, 0.2);
             border-radius: 15px;
             padding: 30px;
             margin-top: 50px;
             backdrop-filter: blur(10px);
-            color: #f2e3b6;
         }
-        .form-container button {
+        .left-section {
+            background-color: rgba(255, 245, 210, 0.9);
+            padding: 20px;
+            border-radius: 15px;
+        }
+        .left-section h4, .left-section h5 {
+            color: #6b4a2b;
+        }
+        .form-section input, .form-section select, .form-section textarea {
+            width: 100%;
+            margin-bottom: 15px;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+        .form-section button {
             background-color: #6b4a2b;
             color: #fff;
             border: none;
@@ -42,99 +48,66 @@
             border-radius: 5px;
             cursor: pointer;
         }
-        .form-container button:hover {
+        .form-section button:hover {
             background-color: #a4764d;
         }
-        .social-btn {
-            border: 1px solid #fff;
-            color: #fff;
-            padding: 10px 15px;
-            margin: 5px;
-            border-radius: 5px;
-            width: 100%;
-            text-align: center;
+        .social-icon {
+            font-size: 20px;
+            color: #6b4a2b;
+            margin-right: 10px;
         }
-        .social-btn.google {
-            /* background-color: #de5246; */
-            color: #F2E3B6;
-        } 
-        .social-btn.facebook {
-            /* background-color: #3b5998; */
-            color: #F2E3B6;
-            
-        }
-        .social-btn:hover {
-            opacity: 0.8;
-        }
-        .divider {
-            text-align: center;
-            margin: 15px 0;
-            color: #f2e3b6;
-        }
-        .divider:before, .divider:after {
-            content: "";
-            display: inline-block;
-            width: 30%;
-            height: 1px;
-            background-color: #f2e3b6;
-            margin: 0 10px;
+        .social-icon:hover {
+            color: #a4764d;
         }
     </style>
 </head>
-<body style="background-image:url(./assets/images/background.jpeg);background-size: cover;">
-    <nav class="navbar navbar-expand-lg navbar-light navigation-bar">
-        <div class="container-fluid">
-            <!-- Brand (Left) -->
-            <a class="navbar-brand" href="#" style="color: #ffffff;">Goldennutzz</a>
-
-            <!-- Toggle Button (for small screens) -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Navbar Items -->
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <!-- Center Links -->
-                <div class="navbar-nav navbar-nav-center">
-                    <a class="nav-link" href="home.html">Home</a>
-                    <a class="nav-link" href="#Products">Products</a>
-                    <a class="nav-link" href="#About Us" >About Us</a>
-                    <a class="nav-link" href="contact.html">Contact Us</a>
-                </div>
-
-                <!-- Right Links -->
-                <div class="navbar-nav navbar-nav-right">
-                    <!-- <a class="nav-link" href="#">Login</a>
-                    <a class="nav-link" href="#">Signup</a> -->
-                    <a class="nav-link"><i class="fa fa-shopping-cart"></i></a>
+<body>
+    <div class="container contact-container">
+        <h1 class="text-center">Contact Us</h1>
+        <p class="text-center">Any question or remarks? Just write us a message!</p>
+        <div class="row">
+            <!-- Left Section -->
+            <div class="col-md-6 left-section">
+                <h4>Contact Information</h4>
+                <h5>Say something to start a live chat!</h5>
+                <p><i class="fa fa-phone"></i> +1012 3456 789</p>
+                <p><i class="fa fa-envelope"></i> email</p>
+                <p><i class="fa fa-map-marker"></i> address</p>
+                <div>
+                    <a href="#"><i class="fa fa-twitter social-icon"></i></a>
+                    <a href="#"><i class="fa fa-instagram social-icon"></i></a>
+                    <a href="#"><i class="fa fa-facebook social-icon"></i></a>
                 </div>
             </div>
-        </div>
-    </nav>
-
-    <!-- Form Section -->
-    <div class="container d-flex justify-content-center">
-        <div class="form-container col-md-6">
-            <h2 class="text-center">Create Account</h2>
-            <div class="text-center mb-3">
-                <a href="#" class="social-btn google"><i class="fa fa-google" style="color: rgb(231, 30, 30);"></i> Continue with Google</a>
-                <a href="#" class="social-btn facebook"><i class="fa fa-facebook" style="color: cornflowerblue;"></i> Continue with Facebook</a>
+            <!-- Right Section -->
+            <div class="col-md-6 form-section">
+                <form>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label for="firstName">First Name</label>
+                            <input type="text" id="firstName" name="firstName" placeholder="Enter your first name">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="lastName">Last Name</label>
+                            <input type="text" id="lastName" name="lastName" placeholder="Enter your last name">
+                        </div>
+                    </div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email">
+                    <label for="contact">Phone Number</label>
+                    <input type="tel" id="contact" name="contact" placeholder="+1 012 3456 789">
+                    <label for="subject">Select Subject</label>
+                    <select id="subject" name="subject">
+                        <option value="general">General Inquiry</option>
+                        <option value="support">Support</option>
+                        <option value="feedback">Feedback</option>
+                    </select>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" placeholder="Write your message..."></textarea>
+                    <button type="submit">Send Message</button>
+                </form>
             </div>
-            <div class="divider">- OR -</div>
-            <form>
-                <label for="fullName">Full Name</label>
-                <input type="text" id="fullName" name="fullName" placeholder="Enter your full name" class="form-control mb-3">
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" class="form-control mb-3">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" class="form-control mb-3">
-                <button type="submit" class="w-100">Create Account</button>
-            </form>
-            <p class="text-center mt-3">Already have an account? <a href="#" style="color: #f2e3b6;">Login</a></p>
         </div>
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
