--- a/contact.html
+++ b/contact.html
@@ -97,10 +97,57 @@ input[type="radio"] {
             margin-left: 10px; /* Space between the tick and text */
             cursor: pointer;
         }
+
+        input[type="text"],
+        input[type="email"],
+        input[type="tel"] {
+    background-color: transparent; 
+    border-radius: 0 !important;/* Removes background color */
+    border: none !important; /* Removes all borders */
+    border-bottom: 2px solid #ccc !important; /* Adds bottom border only */
+    outline: none !important; /* Removes focus outline */
+    font-size: 16px; /* Adjust font size for better appearance */
+    padding: 5px; /* Adds padding for better usability */
+}
+input[type="text"]:focus,
+        input[type="email"]:focus,
+        input[type="tel"]:focus {
+    border-bottom: 2px solid #000; /* Changes bottom border color on focus */
+}
         
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light navigation-bar">
+        <div class="container-fluid">
+            <!-- Brand (Left) -->
+            <a class="navbar-brand" href="index.html" style="color: #ffffff;"><img src="./assets/images/logo.png" class="logo" alt=""></a>
+
+
+            <!-- Toggle Button (for small screens) -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Navbar Items -->
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <!-- Center Links -->
+                <div class="navbar-nav navbar-nav-center">
+                    <a class="nav-link  nav-font" href="index.html">Home</a>
+                    <a class="nav-link  nav-font" href="index.html#Products">Products</a>
+                    <a class="nav-link  nav-font" href="index.html#About Us" >About Us</a>
+                    <a class="nav-link  nav-font" href="contact.html">Contact Us</a>
+                </div>
+
+                <!-- Right Links -->
+                <div class="navbar-nav navbar-nav-right">
+                    <!-- <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="#">Signup</a> -->
+                    <a class="nav-link  nav-font"><i class="fa fa-shopping-cart"></i></a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <main>
         <div class="contact con-container container">
         <h1 style="text-align: center; margin-top: 50px; color: #F2E3B6;">Contact Us</h1>
