--- a/contact.html
+++ b/contact.html
@@ -198,22 +198,22 @@ input[type="text"]:focus,
                     <div class="row">
                         <div class="col-md-6">
                             <label class="msg" for="firstName">First Name</label>
-                            <input type="text" id="firstName" name="firstName" placeholder="Enter your first name">
+                            <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required>
                         </div>
                         <div class="col-md-6">
                             <label  class="msg" for="lastName">Last Name</label>
-                            <input type="text" id="lastName" name="lastName" placeholder="Enter your last name">
+                            <input type="text" id="lastName" name="lastName" placeholder="Enter your last name" required>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-md-6">
                             <label  class="msg" for="email">Email</label>
-                            <input type="email" id="email" name="email" placeholder="Enter your email">
+                            <input type="email" id="email" name="email" placeholder="Enter your email" required>
                         </div>
                         <div class="col-md-6">
                             <label  class="msg" for="contact">Phone Number</label>
-                            <input type="tel" id="contact" name="contact" placeholder="+1 012 3456 789">
+                            <input type="tel" id="contact" name="contact" placeholder="+1 012 3456 789" required>
                         </div>
                     </div>
                    
@@ -235,7 +235,7 @@ input[type="text"]:focus,
                     <label  class="msg" for="subject">Select a Subject:</label><br><br>
                     <div class="radio-group">
                         <div class="radio-item">
-                            <input type="radio" id="general" name="subject" value="general">
+                            <input type="radio" id="general" name="subject" value="general" checked>
                             <label class="custom-radio" for="general"></label>
                             <label class="msg" for="general">General Inquiry</label>
                         </div>
@@ -258,7 +258,7 @@ input[type="text"]:focus,
 
                     
                     <!-- <label for="message">Message</label> -->
-                    <textarea id="message" class="txt" name="message" rows="5" placeholder="Write your message..."></textarea>
+                    <textarea id="message" class="txt" name="message" rows="5" placeholder="Write your message..." required></textarea>
                     <button type="submit">Send Message</button>
                 </form>
             </div>    
