--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="navbar navbar-expand-lg navbar-light navigation-bar">
             <div class="container-fluid">
                 <!-- Brand (Left) -->
-                <a class="navbar-brand" href="index.html" style="color: #ffffff;"><img src="./assets/images/logo (1).png" class="logo" alt=""></a>
+                <a class="navbar-brand" href="index.html" style="color: #ffffff;"><img src="./assets/images/GN Transparant.png" class="logo" alt=""></a>
 
     
                 <!-- Toggle Button (for small screens) -->
