--- a/addcart.html
+++ b/addcart.html
@@ -99,6 +99,8 @@ h3{
 }
 
 .buy-now-btn {
+    width: 412px;
+    margin-left: 12px;
     background-color: #D98943;
     color: white;
     padding: 10px 20px;
@@ -109,7 +111,120 @@ h3{
 .buy-now-btn:hover {
     background-color:  #D5a049;
     }
-        
+    /* @media screen and (max-width: 1024px) {
+    .add-cart-container {
+        padding: 20px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    h3 {
+        font-size: 28px;
+    }
+
+    .star {
+        font-size: 22px;
+    }
+
+    .dollar {
+        font-size: 35px;
+    }
+
+    .product-description {
+        font-size: 14px;
+    }
+
+    .addcart-btn, .buy-now-btn {
+        font-size: 16px;
+        padding: 12px;
+        width: 200px;
+    }
+}/*
+
+/* Mobile Screens (Below 768px) 
+@media screen and (max-width: 768px) {
+    .add-cart-container {
+        width: 95%;
+        padding: 15px;
+        margin-top: 20px;
+    }
+
+    h1 {
+        font-size: 35px;
+    }
+
+    h3 {
+        font-size: 24px;
+    }
+
+    .star {
+        font-size: 20px;
+    }
+
+    .price {
+        font-size: 16px;
+    }
+
+    .dollar {
+        font-size: 30px;
+    }
+
+    .product-description {
+        font-size: 14px;
+        text-align: center;
+    }
+
+    .addcart-btn, .buy-now-btn {
+        font-size: 14px;
+        padding: 10px;
+        width: 100px;
+    }
+} */
+
+/* Small Screens (Below 480px) */
+/* @media screen and (max-width: 480px) {
+    .add-cart-container {
+        padding: 10px;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
+    .star {
+        font-size: 18px;
+    }
+
+    .price {
+        font-size: 14px;
+    }
+
+    .dollar {
+        font-size: 26px;
+    }
+
+    .product-description {
+        font-size: 12px;
+    }
+
+    input[type="email"],
+    input[type="tel"] {
+        font-size: 14px;
+        padding: 6px;
+    }
+
+    .addcart-btn, .buy-now-btn {
+        font-size: 14px;
+        padding: 8px;
+        width: 50px;
+    }
+} */
     </style>
 </head>
 <body>
