responsive for contact page and add cart page have been done

--- a/addcart.html
+++ b/addcart.html
@@ -19,8 +19,6 @@ background: #633A00A3;
 backdrop-filter: blur(24px);    
 margin-top: 0px;
 padding-top: 30px;
-width: 1306px;
-height: 1036px;
 left: 78px;
 gap: 0px;
 opacity: 0px;
@@ -30,7 +28,7 @@ opacity: 0px;
 
 body{
     color: #f2e3b6;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
     /* font-family: 'Red Rose', cursive; */
 }
 
@@ -44,7 +42,7 @@ body{
 }
 
 .buy-now-btn{
-    width: 100%;
+    width: 95%;
     border: 1px solid #f2e3b6;
     padding: 15px;
     margin:10px 0;
@@ -99,7 +97,7 @@ h3{
 }
 
 .buy-now-btn {
-    width: 412px;
+    width: 95%;
     margin-left: 12px;
     background-color: #D98943;
     color: white;
@@ -108,6 +106,7 @@ h3{
     cursor: pointer;
     border-radius: 5px;
 }
+
 .buy-now-btn:hover {
     background-color:  #D5a049;
     }
