mobile responsive and alignments work have been done

--- a/contact.html
+++ b/contact.html
@@ -150,6 +150,11 @@ input[type="tel"]:focus {
     padding: 5px !important;
 }
 
+
+.margin-0-mbl{
+    margin: 0 !important;
+}
+
 .sub-container {
     height: fit-content;
     gap: 20px;
@@ -245,7 +250,7 @@ input[type="tel"]:focus {
         <h1 style="text-align: center; margin-top: 50px; color: #F2E3B6;">Contact Us</h1>
         <p style="text-align: center;color:#F2E3B6;">Any question or remarks? Just write us a message!</p>
         <div class="contact-inner-container">
-        <div class="main ma-container row">
+        <div class="main ma-container row margin-0-mbl">
         <div class="main sub-container col-md-6">
             <div>
                 <h4>Contact information</h4>
