star and bg color for privacy policy changes has been done

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <form id="subscription-form">
                 <input type="email" id="email" name="email" placeholder="Your email address" required>
                 <button type="submit" class="subcribe-btn">Subscribe</button><br>
-                <label for="email" style="color: #F2E3B6;">* Will send you weekly updates for your better tool management.</label>
+                <label for="email" style="color: #F2E3B6;"> Will send you weekly updates for your better tool management.</label>
             </form>
         
             <div id="popup" class="popup">
